feat: Vulnerability fixes - Assignment 3 - Fixed most of warnings